# ML-Library

./: .gitignore  .xdp-sketch.infpnt-6bmRAE  .xdp-sketch.infpnt-GsmiP2  CMakeLists.txt  README.md  b.npy  build.sh  cat  conv2dOp.infpnt  main  main.cpp  main_cnn.cpp  main_cnn2.cpp  main_cnn3.cpp  main_cnn_mnist.cpp  main_lr.cpp  main_mnist.cpp  main_nn.cpp  notas.txt  prepare_dataset.py  pytorch.py  pytorch_baseline.py  sketch.infpnt  tensor.npy  tensors.py  test.sh
data/: X.npy  y.npy
data/test/: gen_test_data.py
include/: autograd.hpp  base.hpp  metrics.hpp  models.hpp  ops.hpp  optimizers.hpp  tensor.hpp  tensor_iterator.hpp  visualize.hpp
include/backend/: cuda_mem_arena.hpp  tensor_cpu.hpp  tensor_cuda.hpp
math/: tensor.cpp  tensor.hpp
sketches/: cuda_sum_dim.infpnt  sketch.infpnt  unfold.infpnt
src/: autograd.cpp  metrics.cpp  models.cpp  ops.cpp  optimizers.cpp  tensor.cpp  tensor_iterator.cpp  visualize.cpp
src/backend/: cuda_mem_arena.cpp  tensor_cpu.cpp  tensor_cuda.cu
test/: broadcast.cpp  gen_test_data.py  test_cuda.cpp  test_tensor.cpp
util/: arena.c  arena.h  base.h
